--- a/MIST143_Traveler/appsettings.json
+++ b/MIST143_Traveler/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PlanetTravelConnection": "Data Source=.;Initial Catalog=PlanetTravel;Integrated Security=True"
+
+  }
 }
