--- a/MIST143_Traveler/MIST143_Traveler.csproj
+++ b/MIST143_Traveler/MIST143_Traveler.csproj
@@ -43,4 +43,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Productpagelist\Components\NewFolder\" />
+  </ItemGroup>
+
 </Project>
