--- a/MIST143_Traveler/appsettings.json
+++ b/MIST143_Traveler/appsettings.json
@@ -8,7 +8,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PlanetTravelConnection": "Data Source=192.168.36.26;Initial Catalog=PlanetTravel;User ID=yo;Password=1234"
+
+    "PlanetTravelConnection": "Data Source=.;Initial Catalog=PlanetTravel;Integrated Security=True"
+
 
   }
 }
