--- a/MIST143_Traveler/appsettings.json
+++ b/MIST143_Traveler/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "PlanetTravelConnection": "Data Source=192.168.36.26;Initial Catalog=PlanetTravel;User ID=jay;Password=1234"
+    "PlanetTravelConnection": "Data Source=.;Initial Catalog=PlanetTravel;Integrated Security=True"
 
 
   }
