--- a/MIST143_Traveler/MIST143_Traveler.csproj
+++ b/MIST143_Traveler/MIST143_Traveler.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\SouvenirShop\" />
     <Folder Include="wwwroot\Images\客戶大頭貼\" />
   </ItemGroup>
 
