--- a/MIST143_Traveler/MIST143_Traveler.csproj
+++ b/MIST143_Traveler/MIST143_Traveler.csproj
@@ -52,6 +52,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="MimeKit" Version="3.4.2" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.3" />
   </ItemGroup>
 
   <ItemGroup>
